--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -13,3 +13,15 @@
     bottom: 0px;
     left: 0px;
 }
+
+.sequence-element-video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    background-size: cover;
+    overflow: hidden;
+}
