--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -25,3 +25,12 @@
     background-size: cover;
     overflow: hidden;
 }
+
+.sequence-element.fadeIn {
+    animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
